--- a/pages/components.html
+++ b/pages/components.html
@@ -62,7 +62,7 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">272</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">297</span>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@ permalink: /components
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
@@ -114,7 +114,7 @@ permalink: /components
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
           </div>
         </div>
@@ -245,39 +245,6 @@ permalink: /components
   </div>
 </div>
 
-<!--
-<div class="pmx-field">
-  <div class="pmx-field__inner">
-    <div class="pmx-field__label">Teams | Multi Select - expanded</div>
-    <div class="pmx-field__value">
-
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0BDA51;">܌</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00BFFF;">܌</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #F4CA16;">܌</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
--->
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
