--- a/pages/components.html
+++ b/pages/components.html
@@ -149,6 +149,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #E52C2C;">ܐ</span>
@@ -172,12 +173,14 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ण</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ऒ</span>
