components/tags: new example text, new label. removed wrong component (comment)

--- a/pages/components.html
+++ b/pages/components.html
@@ -41,7 +41,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Tags | Multi Select - collapsed</div>
+    <div class="pmx-field__label">Tags</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
@@ -55,8 +55,6 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Label</span>
-            <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
@@ -64,6 +62,7 @@ permalink: /components
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">272</span>
           </div>
         </div>
       </div>
@@ -77,7 +76,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Tags | Multi Select</div>
+    <div class="pmx-field__label">Tags | Filter</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--readonly JS_selector">
@@ -246,6 +245,7 @@ permalink: /components
   </div>
 </div>
 
+<!--
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Teams | Multi Select - expanded</div>
@@ -277,6 +277,7 @@ permalink: /components
     </div>
   </div>
 </div>
+-->
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
