--- a/pages/components.html
+++ b/pages/components.html
@@ -204,41 +204,49 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Paused</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Rejected</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum dolo rsit amet lore ipsum dolor sit amet lorem</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ipsum</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Dolor</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Amet</span>
@@ -260,6 +268,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ޅ</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ބ</span>
@@ -280,6 +289,7 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
@@ -300,12 +310,13 @@ permalink: /components
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
           </div>
         </div>
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">च</span>
           </div>
         </div>
-
+        <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
