--- a/pages/components.html
+++ b/pages/components.html
@@ -44,7 +44,7 @@ permalink: /components
     <div class="pmx-field__label">Tags</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
+      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-tagpicker">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
@@ -403,3 +403,4 @@ permalink: /components
 
 {% include popups/multiSelector-status.html %}
 {% include popups/multiSelector-tags.html %}
+{% include popups/multiSelector-tags-colors.html %}
