tag-picker: made tags to be the same as in the external components

--- a/pages/tag-picker.html
+++ b/pages/tag-picker.html
@@ -14,7 +14,7 @@ permalink: /tag
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">xamarin_tablet</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">282</span>
           </div>
         </div>
         <div class="pmx-selector__item pmx-selector__item--selected">
