filter page: updated design

--- a/pages/filter.html
+++ b/pages/filter.html
@@ -7,133 +7,114 @@ permalink: /filter
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Filter date - collapsed</div>
+    <div class="pmx-field__label">Date | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect JS_selector" data-popid="#multiSelector-3">
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">include</span>
-          </div>
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Include</span>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">today</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">or</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or exclude</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</span>
           </div>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">and</span>
-          </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">And</span>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</span>
           </div>
         </div>
       </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">today</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
 
-
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Filter tag - collapsed</div>
+    <div class="pmx-field__label">Tags | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect JS_selector" data-popid="#multiSelector-3">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Include</span>
+        </div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">include</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
           </div>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">team</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
-          </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">And</span>
         </div>
-        <span class="pmx-selector__itemSeperator"></span>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">or</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">squad</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">squad2</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or exclude</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">community</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">design</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">and</span>
-          </div>
-        </div>
-        <span class="pmx-selector__itemSeperator"></span>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #dcdcdc; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">sprint</span>
-            <span class="pmx-selector__blockSeperator"></span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">sprint212</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
           </div>
         </div>
       </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
