--- a/pages/filter.html
+++ b/pages/filter.html
@@ -4,59 +4,7 @@ title: Filter
 permalink: /filter
 ---
 
-
-<div class="pmx-field">
-  <div class="pmx-field__inner">
-    <div class="pmx-field__label">Date | Filter</div>
-    <div class="pmx-field__value">
-
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Include</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</span>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">And</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
-      </div>
-
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">today</span>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</span>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
+{% include popups/filter-tags.html%}
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
@@ -107,6 +55,59 @@ permalink: /filter
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Date | Filter</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Include</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">And</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
+        </div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">today</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</span>
           </div>
         </div>
       </div>
