--- a/pages/components.html
+++ b/pages/components.html
@@ -10,7 +10,7 @@ permalink: /components
     <div class="pmx-field__value">
 
       <div class="pmx-selector pmx-selector--collapsed JS_selector">
-        <div class="pmx-selector__item  JS_selectorItem pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
           </div>
@@ -44,7 +44,40 @@ permalink: /components
     <div class="pmx-field__label">Tags</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-3">
+      <div class="pmx-selector pmx-selector--collapsed JS_selector" data-popid="#multiSelector-3">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
+
+            <div class="pmx-selector__itemSeperator"></div>
+
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Label</span>
+            <span class="pmx-selector__blockSeperator"></span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+
+            <div class="pmx-selector__itemSeperator"></div>
+
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">297</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Tags</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect JS_selector">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
@@ -75,7 +108,6 @@ permalink: /components
 
 
 
-
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Tags | Multi Select</div>
@@ -103,10 +135,8 @@ permalink: /components
       </div>
 
       <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or</span>
-          </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
         </div>
       </div>
 
