simplify the components a lot

--- a/pages/filter.html
+++ b/pages/filter.html
@@ -30,10 +30,8 @@ permalink: /filter
       </div>
 
       <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or</span>
-          </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
         </div>
       </div>
 
@@ -87,10 +85,8 @@ permalink: /filter
       </div>
 
       <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">or</span>
-          </div>
+        <div class="pmx-selector__itemSeperator">
+          <span class="pmx-selector__itemSeperatorLabel">Or</span>
         </div>
       </div>
 
