--- a/pages/components.html
+++ b/pages/components.html
@@ -9,7 +9,7 @@ permalink: /components
     <div class="pmx-field__label">Due date | Single Select - collapsed</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed JS_selector">
+      <div class="pmx-selector JS_selector">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
@@ -26,7 +26,7 @@ permalink: /components
     <div class="pmx-field__label">Status | Single Select - collapsed</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
+      <div class="pmx-selector MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">܌</span>
@@ -44,7 +44,7 @@ permalink: /components
     <div class="pmx-field__label">Tags</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed JS_selector" data-popid="#multiSelector-3">
+      <div class="pmx-selector JS_selector" data-popid="#multiSelector-3">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
@@ -71,6 +71,54 @@ permalink: /components
 
 
 
+<h2>NO popup</h2>
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Tags | Filter</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
@@ -103,71 +151,12 @@ permalink: /components
   </div>
 </div>
 
-
-
-<div class="pmx-field">
-  <div class="pmx-field__inner">
-    <div class="pmx-field__label">Tags | Filter</div>
-    <div class="pmx-field__value">
-
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Include</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">And</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
-      </div>
-
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Billable | Single Select - expanded</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
@@ -190,7 +179,7 @@ permalink: /components
     <div class="pmx-field__label">Status | Single Select - expanded</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">च</span>
@@ -222,7 +211,7 @@ permalink: /components
     <div class="pmx-field__label">Status | Single Select - expanded</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
@@ -286,7 +275,7 @@ permalink: /components
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Unselectable Single Select - expanded</div>
     <div class="pmx-field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_selector JS_pmx-selector--changeIcons">
+      <div class="pmx-selector pmx-selector--expanded JS_selector JS_pmx-selector--changeIcons">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ޅ</span>
@@ -307,7 +296,7 @@ permalink: /components
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Tablet view selector | Unselectable Single Select - expanded</div>
     <div class="pmx-field__value">
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
@@ -328,7 +317,7 @@ permalink: /components
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Mobile view selector | Single Select - Expanded</div>
     <div class="pmx-field__value">
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--requi#E52C2C pmx-selector--toggleSelect">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
@@ -356,7 +345,7 @@ permalink: /components
     <div class="pmx-field__label">Prefix | Type | Field</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--readonly">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ބ</span>
@@ -375,7 +364,7 @@ permalink: /components
   <div class="pmx-field__inner">
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--readonly">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
@@ -393,7 +382,7 @@ permalink: /components
   <div class="pmx-field__inner">
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--readonly">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Title</span>
